tests/bad/no_static_member.oc
/// fail: Could not find method foo in structure Foo

struct Foo {}

def main() {
    Foo::foo()
    Bar::foo()
}